# Sistema-Pandora

./: .cz.toml  .editorconfig  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHANGELOG_FASE2.md  Dockerfile  README.md  app.yaml  conftest.py  deploy.bat  deploy.sh  devshell.cmd  docker-compose.yml  entrypoint.sh  env.example.yaml  erros.txt  erros_full_mypy.txt  gitignore.txt  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  quality_summary.json  relatorio_erros.txt  relatorio_pyright.txt  render.yaml  requirements-dev.txt  requirements.txt  run_audit_locmem_check.py  run_fast.bat  run_recreate.bat  run_tests.bat  script_check_permdata.py  seed_wizard_docs.py  test_imports.cmd
admin/: __init__.py  admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
agenda/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
agendamentos/: API_README.md  admin.py  api_views.py  apps.py  forms.py  models.py  models_mapping.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
ai_auditor/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
apropriacao/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
aprovacoes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
assistente_web/: admin.py  apps.py  models.py  urls.py  views.py
bi/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cadastros_gerais/: admin.py  apps.py  filters.py  forms.py  models.py  models_tipo_documento.py  tables.py  urls.py  views.py
chat/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
clientes/: admin.py  api.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py  wizard_forms.py  wizard_urls.py  wizard_views.py
compras/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
core/: WIZARD_TENANT_README.md  admin.py  api_urls.py  api_views.py  apps.py  authorization.py  chatbot.py  consumers.py  context_processors.py  dashboard_widgets.py  forms.py  home_system.py  middleware.py  middleware_latency.py  middleware_session_inactivity.py  mixins.py  models.py  monkeypatches.py  permissions.py  routing.py  serializers.py  signals.py  tables.py  urls.py  utils.py  validators.py  views.py  views_help.py  views_wizard_metrics.py  wizard_base.py  wizard_extensions.py  wizard_forms.py  wizard_views.py
cotacoes/: admin.py  apps.py  metrics.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py  views_portal.py
docker/: entrypoint.sh
docs/: 2FA.md  ADR-0001-agendamentos-vs-atendimentos.md  AGENDAMENTOS_PERMISSOES.md  AGENDA_UNIFICADA.md  AI_AGENT_HANDOFF.md  ARCHITECTURE.md  AUDITORIA_TECNICA_AVANCADA.md  AUDITORIA_WIZARD_E_ADMIN_VIEWS.md  CHANGELOG.md  DEV_ENV_SETUP.md  (+36 more)
(+1182 files in other folders)
